--- a/backend/artwork/templates/painting_detail.html
+++ b/backend/artwork/templates/painting_detail.html
@@ -3,10 +3,10 @@
 {% block title %}{{ painting.title }}{% endblock %}
 
 {% block content_body %}
-    <div class="component-detail">  
-        <img src="{{ painting.img_path }}" alt="{{ painting.title }}" class="component-img"> 
+    <div class="painting-detail">  
+        <img src="{{ painting.img_path }}" alt="{{ painting.title }}" class="painting-img"> 
         
-        <div class="component-info"> 
+        <div class="painting-info"> 
             <h1>{{ painting.title }}</h1>
             
             <p>{{ painting.description }}</p> 
