--- a/backend/artwork/templates/order_summary.html
+++ b/backend/artwork/templates/order_summary.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load static %}  <!-- Загрузите статические теги -->
+
 {% block title %}Сформированная заявка{% endblock %}
 
 {% block content_body %}
@@ -7,24 +9,23 @@
         <h1 class="order-title">Список картин на экспертизу</h1>
 
         <div class="order-details">
-            <h3>Картины в вашем списке:</h3>
+            
 
             <div class="order-items">
                 {% for painting in data %}
                 <div class="order-item">
                     <div class="item-image">
-                        <img src="{{ painting.img_path }}" alt="{{ painting.title }}" class="painting-img">
+                        <!-- Предполагаем, что путь к изображению формируется из id -->
+                        <img src="{{ painting.img_path }}" alt="{{ painting.title }}" class="painting-img"> 
                     </div>
                     <div class="item-details">
                         <h5>{{ painting.title }}</h5>
-                        <p class="item-artist">{{ painting.artist }}</p>
-                        <p class="item-price">{{ painting.price }} руб.</p>
+                       
                         <a href="{% url 'painting_detail' painting.id %}" class="item-more">Подробнее</a>
                     </div>
-                    <div class="item-quantity">
-                        <button class="qty-btn">-</button>
-                        <span>1</span>
-                        <button class="qty-btn">+</button>
+                    <div class="item-comment">
+                        <label for="comment_{{ painting.id }}">Комментарий на экспертизу:</label>
+                        <textarea id="comment_{{ painting.id }}" name="comment_{{ painting.id }}" rows="3" placeholder="Введите комментарий"></textarea>
                     </div>
                 </div>
                 {% endfor %}
