--- a/backend/artwork/templates/paintings_list.html
+++ b/backend/artwork/templates/paintings_list.html
@@ -3,20 +3,30 @@
 {% block title %}Список картин{% endblock %}
 
 {% block content_head %}
-    <div class="container">
-        <form method="get" action="/search/">
-            <div class="search_bar">
-                <input type="text" name="q" placeholder="Поиск" value="{{ search_query }}">
-                <button type="submit" id="search">
-                    <img src="http://127.0.0.1:9000/web-img/search.png" alt="Иконка поиска">
-                </button>
-            </div>
-        </form>
-        <div class="busket">
-            <a href="{% url 'order_summary' %}"><img src="http://127.0.0.1:9000/web-img/cart.png" alt="Корзина"></a>
-            <span class="busket_count">{{ data.order_count }}</span>
+<div class="container">
+    <form method="get" action="{% url 'paintings_list' %}">
+        <div class="search_bar">
+            <input type="text" name="painting_title" placeholder="Поиск по названию" value="{{ search_query }}">
+            <button type="submit" id="search">
+                <img src="http://127.0.0.1:9000/web-img/search.png" alt="Иконка поиска">
+            </button>
         </div>
+    </form>
+    <div class="expertise_list">
+        {% if data.order_id %}  
+            <a href="{% url 'order_summary' data.order_id %}">
+                <img src="http://127.0.0.1:9000/web-img/cart.png" alt="Корзина">
+            </a>
+            <span class="expertise_count">{{ data.order_count }}</span>
+        {% else %}
+            <a href="{% url 'order_summary' 0 %}">  
+                <img src="http://127.0.0.1:9000/web-img/cart.png" alt="Корзина">
+            </a>
+            <span class="expertise_count">3</span>
+        {% endif %}
     </div>
+</div>
+
 {% endblock %}
 
 {% block content_body %}
@@ -28,7 +38,7 @@
                     <div class="card-body">
                         <h5 class="card-title">{{ painting.title }}</h5>
                         <p class="card-description">{{ painting.short_description }}</p>
-                        <p class="card-price">{{ painting.price }} руб.</p>
+                        
                     </div>
                 </div>
             {% endfor %}
